--- a/docs/0735.md
+++ b/docs/0735.md
@@ -89,6 +89,23 @@
 工作时间：有周末，除非有急事。2周一次大会
 
 学生前途：此外，能动这专业能有其他几个方向有前途？
+* * *
+
+评分：3.0
+
+导师辨识特征：无人驾驶
+
+学术水平：不好评价，因为不是他的学生，但听过很多他的故事，我还有他的微信，微信名字叫 向太阳学习 可以科研项目 压力拉满
+
+科研经费：应该不缺钱 据说横向项目很多
+
+学生补助：母鸡啊
+
+师生关系：不太好 本校的本科生很少报他的研究生 因为非常的累
+
+工作时间：项目急的时候24小时随叫随到
+
+学生前途：据说还可以  有一些学生搞无人驾驶 去了百度
 
 ## 秦旭达
 
@@ -1235,12 +1252,44 @@ PS，及其爽朗的笑声
 
 评分：4.25
 
-导师辨识特征：院长\r
+导师辨识特征：院长
 
-学术水平：王老师是杰青和国家奖获得者，具有一定的学术水平，同时对于学生的要求也比较高。现在是学院院长，直接指导学生的时候不多，但是团队的年轻老师都很负责。\r
+学术水平：王老师是杰青和国家奖获得者，具有一定的学术水平，同时对于学生的要求也比较高。现在是学院院长，直接指导学生的时候不多，但是团队的年轻老师都很负责。
 
-科研经费：科研经费足\r
+科研经费：科研经费足
 
-学生补助：比较尊重学生。课题组对学生要求高，定期会开会关注学生的进度，但同时也有效提高学生的执行力。\r
+学生补助：比较尊重学生。课题组对学生要求高，定期会开会关注学生的进度，但同时也有效提高学生的执行力。
 
-师生关系：前途不错，硕士期间完成小论文后可以去实习。\r
+师生关系：前途不错，硕士期间完成小论文后可以去实习。
+
+## 秦彦周
+
+学校：天津大学
+
+院系：机械工程学院
+
+* * *
+
+评分：4.5
+
+导师辨识特征：副教授
+
+学术水平：
+
+加拿大滑铁卢大学毕业，学术水平尚可，工作主要以仿真为主，实验为辅助
+
+科研经费：
+
+背靠国家千人课题组，经费较为充足
+
+学生补助：
+
+正常的补助，不多也不少
+
+师生关系：
+
+挺热心的老师，属于尊重学生能跟学生说心里话的老师。
+
+做科研的话，挺推荐选他的，并且他的导师是滑铁卢大学的教授李献国老师，硕士做的好的话 可以直接跳到祖师课题组去读博士。
+
+另外，机械学院副院长焦魁跟他是一个老师，都是李献国老师的学生，焦老板年轻，不出意外，等天友哥升了以后，他就是下任院长。虽然好像师生关系没那么融洽。
